# cognition-curator

./: .cursorrules  .gitignore  .pre-commit-config.yaml  DEVELOPMENT_RULES.md  README.md  SETUP_GUIDE.md  TODO.md  fix_views.sh  fix_views_strict.sh  prompt.md  quick_build.sh  quick_validate.sh  validate_app.sh  validate_new_project.sh  validate_project.sh
.cursor/rules/: dev-rules.mdc
CognitionCurator/: CognitionCuratorApp.swift  ContentView.swift  Info.plist  PersistenceController.swift
CognitionCurator.xcodeproj/: project.pbxproj
CognitionCurator/Services/: SpacedRepetitionService.swift
CognitionCurator/Views/: CreateDeckView.swift  DeckDetailView.swift  EditDeckView.swift  HomeView.swift  ReviewView.swift
CognitionCuratorWidget/: CognitionCuratorWidget.swift  Info.plist
cognition.curator/CognitionCuratorWidget/: CognitionCuratorWidget.swift  CognitionCuratorWidgetBundle.swift  CognitionCuratorWidgetControl.swift  CognitionCuratorWidgetExtension.entitlements
cognition.curator/cognition.curator/: ContentView.swift  PersistenceController.swift  cognition_curator.entitlements  cognition_curatorApp.swift
cognition.curator/cognition.curator.xcodeproj/: project.pbxproj
cognition.curator/cognition.curator/Models/: CodableHelpers.swift  Deck.swift  DeckExtensions.swift  Flashcard.swift  OnboardingModels.swift  ReviewSession.swift  SyncOperation.swift  User.swift
cognition.curator/cognition.curator/Preview Content/: PreviewHelper.swift
cognition.curator/cognition.curator/Services/: AIGenerationService.swift  APIConfiguration.swift  AnalyticsAPIService.swift  AuthenticationService.swift  DeckAPIService.swift  DeepLinkHandler.swift  FlashcardAPIService.swift  NetworkMonitor.swift  OfflineProgressService.swift  OfflineSyncService.swift  ProgressDataService.swift  (+3 more)
cognition.curator/cognition.curatorTests/: cognition_curatorTests.swift
cognition.curator/cognition.curatorUITests/: cognition_curatorUITests.swift  cognition_curatorUITestsLaunchTests.swift
server/: Dockerfile  README.md  README_MIGRATIONS.md  docker-compose.yml  env.example  migrate_db.py  pyproject.toml  pytest.ini  railway.json  railway_schema.sql  requirements-dev.txt  requirements.txt  test_ai_config.py
server/scripts/deploy/: railway_init.sh  railway_migration_guide.md
server/scripts/dev/: setup.sh  test.sh  test_migrations.sh
server/src/: __init__.py  app.py  database.py
server/src/ai/: __init__.py  manager.py
server/src/ai/providers/: __init__.py  base.py  claude.py  mock.py
server/src/api/: __init__.py  ai.py  analytics.py  auth.py  decks.py  flashcards.py  sync.py  users.py
server/src/config/: __init__.py  config.py
server/src/models/: __init__.py  analytics.py  deck.py  flashcard.py  review_session.py  user.py
server/tests/: __init__.py  conftest.py
server/tests/integration/: __init__.py  test_api_endpoints.py  test_live_api.py  test_prompt_quality.py
server/tests/unit/: __init__.py  test_config.py
(+33 files in other folders)
